//protoc --go_out=plugins=grpc:. ./service.proto

syntax = "proto3";

package pb;

service Greeter {

    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
